# mcpvitals

./: CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: DESIGN.md  PLAN.md
src/mcpvitals/: badge.py  cli.py  introspect.py  lock.py  models.py  monitor.py  report.py  scoring.py
src/mcpvitals/checks/: __init__.py  conformance.py  confusion.py  migration.py  reliability.py  security.py  tokens.py
tests/: conftest.py  test_badge.py  test_cli.py  test_cli_watch.py  test_conformance.py  test_confusion.py  test_docs.py  test_introspect.py  test_lock.py  test_migration.py  test_models.py  test_monitor.py  test_package.py  test_registry.py  test_reliability.py  test_report.py  test_scoring.py  test_security.py  test_tokens.py
tests/fixtures/: healthy.json  messy.json
tests/servers/: reference_server.py
